--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^0.8.2",
     "animate.css": "^4.1.1",
     "axios": "^1.6.8",
     "pinia": "^2.1.7",
